--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -1,29 +1,14 @@
 @import 'vars';
 
-@font-face {
-    font-family: "Avenir";
-    font-weight: 400;
-    font-style: normal;
-    src: url("/avenir-400.woff2") format("woff2");
-    font-display: swap;
-  }
-
 body {
     font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    line-height: 1.65;
-    color: #373F49;
-    background: @grey;
+    background: @white;
     margin: 0;
-}
-
-img {
-    display: block;
-    width: 100%;
+    color: @red;
 }
 
 h1, h2, h3 {
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: normal;
 }
 
