--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -1,7 +1,8 @@
 @import 'vars';
+@import 'webfont';
 
 body {
-    font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
+    font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
     background: @white;
     margin: 0;
     color: @red;
