use section links from contentful

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -9,6 +9,7 @@
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 1fr minmax(0, 30rem) minmax(0, 30rem) 1fr;
+  height: @headerHeight;
 }
 
 .titleLink {
