--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -5,8 +5,10 @@
 @pink: #7d69f6;
 @yellow: #fef377;
 @grey: #f0f0f0;
-@white: white;
+@white: #F5F5F5;
 
+@fontSizeXL: 2.5rem;
+@fontSizeL: 2rem;
 @fontSizeM: 1.5rem;
 
 
