Footer: fixed background

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -3,6 +3,7 @@
 .footer {
     .headerFooterGrid();
     .globeBackground();
+    background-attachment: fixed;
     min-height: 15rem;
     padding: 1rem 0;
     font-size: @fontSizeM;
