MainIllustration: very basic mobile optimization

--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -11,6 +11,10 @@
   max-width: @contentWidthL;
   margin: 0 auto;
   position: relative;
+
+  @media (max-width: @breakPointM) {
+    min-height: 13rem;
+  }
 }
 
 .figure {
