add illustration as inline svg

--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -21,6 +21,11 @@
     position: absolute;
     height: 100%;
     top: 0;
+    width: 100%;
+
+    svg {
+        height: 100%;
+    }
 
     &2 {
         right: 0;
