first time movable

--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -25,9 +25,15 @@
 
   svg {
     height: 100%;
+    width: 100%;
   }
 
   &2 {
     right: 0;
   }
+}
+
+.illustration {
+  touch-action: none;
+  user-select: none;
 }
