illustration to fill the whole stage

--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -3,12 +3,13 @@
 .container {
     .globeBackground();
     background-attachment: fixed;
-    padding: 4rem 1rem;
+    // padding: 4rem 1rem;
 }
 
 .stage {
-    min-height: 25rem;
-    max-width: @contentWidthL;
+    min-height: 30rem;
+    // max-width: @contentWidthL;
+    width: 100%;
     margin: 0 auto;
     position: relative;
 
