--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -51,3 +51,29 @@
     left: 0;
     right: 0;
 }
+
+.youtubeContainer {
+    position: relative;
+    padding-bottom: 56%;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+}
+
+.callToActionContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.callToActionLink {
+    padding: .8rem .8rem .5rem;
+    border: currentColor solid 3px;
+    border-radius: 1rem;
+    text-decoration: none;
+}
