--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -88,3 +88,25 @@
     background: var(--font-color);
   }
 }
+
+.slogan {
+  .contentGrid();
+  position: relative;
+  z-index: 1;
+  grid-row-gap: 1rem;
+  margin: 4rem 0;
+  font-size: @fontSizeXL;
+
+  @media (max-width: @breakPointM) {
+    font-size: @fontSizeL;
+  }
+}
+
+.sloganLine1 {
+  grid-column: 1 / -1;
+}
+
+.sloganLine2 {
+  grid-column: 3 / -1;
+  color: @blueBright;
+}
