basic style for mail form

--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -11,6 +11,10 @@
 @fontSizeL: 2rem;
 @fontSizeM: 1.5rem;
 
+@borderWidth: 3px;
+@borderRadius: 1rem;
+@buttonPadding: 0.8rem 0.8rem 0.5rem;
+
 @headerHeight: 5rem;
 
 @contentWidth: 45rem;
