--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -82,9 +82,9 @@
 }
 
 .callToActionLink {
-  padding: 0.8rem 0.8rem 0.5rem;
-  border: var(--font-color) solid 3px;
-  border-radius: 1rem;
+  padding: @buttonPadding;
+  border: var(--font-color) solid @borderWidth;
+  border-radius: @borderRadius;
   text-decoration: none;
 
   &:hover {
