--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -11,6 +11,9 @@
 @fontSizeL: 2rem;
 @fontSizeM: 1.5rem;
 
+@borderWidth: 3px;
+@borderRadius: 1rem;
+@buttonPadding: .8rem .8rem .5rem;
 
 @headerHeight: 5rem;
 
