--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -3,12 +3,11 @@
 .container {
     .globeBackground();
     background-attachment: fixed;
-    // padding: 4rem 1rem;
 }
 
 .stage {
     min-height: 30rem;
-    // max-width: @contentWidthL;
+    height: 100%;
     width: 100%;
     margin: 0 auto;
     position: relative;
