--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -91,7 +91,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 2rem;
 }
 
 .callToActionLink {
@@ -104,6 +103,12 @@
     color: var(--bg-color);
     background: var(--font-color);
   }
+}
+
+.callToActionContainer,
+.aboutUs,
+.emailSignup {
+  margin-top: 2rem;
 }
 
 .slogan {
