--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -36,7 +36,8 @@
 }
 
 .sectionBody {
-  max-width: @contentWidth;
+  max-width: @contentWidthL;
+  .contentGrid();
   margin: 0 auto;
   position: relative;
   z-index: 1;
@@ -50,6 +51,10 @@
   > :last-child {
     margin-bottom: 0;
   }
+
+  > :first-child {
+    margin-top: 0;
+  }
 }
 
 .sectionBodyNoEvents {
@@ -59,11 +64,23 @@
 .title {
   font-size: @fontSizeXL;
   margin-top: 0;
+  margin-bottom: 1rem;
 
   @media (max-width: @breakPointM) {
     font-size: @fontSizeL;
     margin-bottom: 1rem;
   }
+}
+
+.title,
+.bodyText,
+.callToActionContainer,
+.emailSignup {
+  .contentGridSlim();
+}
+
+.aboutUs {
+  .contentGridMedium();
 }
 
 .illustration {
@@ -113,9 +130,10 @@
 
 .slogan {
   .contentGrid();
+  grid-column: 1 / -1;
   position: relative;
   z-index: 1;
-  grid-row-gap: 1rem;
+  grid-row-gap: 2rem;
   margin: 4rem 0;
   font-size: @fontSizeXL;
 
@@ -125,10 +143,26 @@
 }
 
 .sloganLine1 {
-  grid-column: 1 / -1;
+  grid-column: 3 / -1;
+
+  @media (max-width: @breakPointM) {
+    grid-column-start: 2;
+  }
+
+  @media (max-width: @breakPointM) {
+    grid-column-start: 1;
+  }
 }
 
 .sloganLine2 {
-  grid-column: 3 / -1;
+  grid-column: 4 / -1;
   color: @blueBright;
+
+  @media (max-width: @breakPointM) {
+    grid-column-start: 3;
+  }
+
+  @media (max-width: @breakPointS) {
+    grid-column-start: 2;
+  }
 }
