--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -21,6 +21,7 @@
 @contentWidthL: 60rem;
 
 @breakPointM: 800px;
+@breakPointS: 500px;
 
 .headerFooterGrid() {
   @half: calc(@contentWidthL / 2 - 1rem);
@@ -31,7 +32,34 @@
 
 .contentGrid() {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: [wide-start] 1fr [medium-start] 1fr [slim-start] repeat(
+      8,
+      1fr
+    ) [slim-end] 1fr [medium-end] 1fr [wide-end];
+  grid-gap: 1rem;
+
+  @media (max-width: @breakPointM) {
+    grid-template-columns: [wide-start medium-start] 1fr [slim-start] repeat(
+        8,
+        1fr
+      ) [slim-end] 1fr [wide-end medium-end];
+  }
+
+  @media (max-width: @breakPointS) {
+    grid-template-columns: [wide-start slim-start medium-start] repeat(8, 1fr) [wide-end medium-end slim-end];
+  }
+}
+
+.contentGridWide() {
+  grid-column: wide-start / wide-end;
+}
+
+.contentGridMedium() {
+  grid-column: medium-start / medium-end;
+}
+
+.contentGridSlim() {
+  grid-column: slim-start / slim-end;
 }
 
 .globeBackground() {
