--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -1,6 +1,10 @@
 @import 'vars';
 @import 'webfont';
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
     background: @white;
