use same grid for static page text

--- a/src/components/StaticPage/style.module.less
+++ b/src/components/StaticPage/style.module.less
@@ -3,5 +3,10 @@
 .body {
     margin: 0 auto;
     padding: 3rem 1rem;
-    max-width: @contentWidth;
+    .contentGrid();
+    max-width: @contentWidthL;
+}
+
+.bodyInner {
+    .contentGridSlim();
 }
