mobile layout tweaks

--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -68,7 +68,7 @@
 
     @media (max-width: @breakPointM) {
         font-size: @fontSizeL;
-        margin-bottom: 1rem;
+        margin-bottom: 0;
     }
 }
 
@@ -121,6 +121,10 @@
 
 .callToActionContainer, .aboutUs, .emailSignup {
     margin-top: 2rem;
+
+    @media (max-width: @breakPointM) {
+        margin-top: 0;
+    }
 }
 
 .slogan {
@@ -134,6 +138,12 @@
 
     @media (max-width: @breakPointM) {
         font-size: @fontSizeL;
+    }
+
+    @media (max-width: @breakPointS) {
+        font-size: @fontSizeM;
+        grid-row-gap: 1rem;
+        margin: 8rem 0;
     }
 }
 
