--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -72,7 +72,7 @@
     }
 }
 
-.title, .bodyText, .callToActionContainer, .emailSignup {
+.title, .bodyText, .callToActionContainer, .emailSignup, .donateButton {
     .contentGridSlim();
 }
 
