CTA left aligned

--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -107,7 +107,7 @@
 .callToActionContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
 }
 
 .callToActionLink {
