--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -62,7 +62,7 @@
 }
 
 .title {
-  font-size: @fontSizeXL;
+  font-size: @fontSizeXXL;
   margin-top: 0;
   margin-bottom: 1rem;
 
@@ -139,7 +139,7 @@
   z-index: 1;
   grid-row-gap: 2rem;
   margin: 4rem 0;
-  font-size: @fontSizeXL;
+  font-size: @fontSizeXXL;
 
   @media (max-width: @breakPointM) {
     font-size: @fontSizeL;
