--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -1,11 +1,11 @@
 @import '../style/vars.less';
 
 .section {
-    padding: 5rem 1rem;
+    padding: 5rem 1rem 10rem;
     position: relative;
 
     @media (max-width: @breakPointM) {
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 5rem;
     }
 
     &:nth-child(3n+3) {
