--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
-  background: @white;
+  background: @grey;
   margin: 0;
   color: @red;
 }
