--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -5,7 +5,8 @@
 @pink: #7d69f6;
 @yellow: #fef377;
 @grey: #f0f0f0;
-@white: #f5f5f5;
+@greyBright: #f5f5f5;
+@white: white;
 
 @fontSizeXXL: 3rem;
 @fontSizeXL: 2.5rem;
