main background grey, additional whiter white

--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -24,9 +24,9 @@
 
     &:nth-child(3n+2) {
         --bg-color: @red;
-        --font-color: @white;
+        --font-color: @greyBright;
         background: @red;
-        color: @white;
+        color: @greyBright;
     }
 }
 
