--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -77,3 +77,12 @@
         @yellow
     ;
 }
+
+.menuLink() {
+    text-decoration: none;
+    box-shadow: inset 0 -0.1em currentColor;
+
+    &:hover {
+        box-shadow: none;
+    }
+}
