more margin between menu items

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -38,10 +38,9 @@
 .navItem {
   margin: 0;
   display: inline;
+
   & + & {
-    &:before {
-      content: ' ';
-    }
+    margin-left: 1rem;
   }
 }
 
