fix video section

--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -4,6 +4,10 @@
   padding: 5rem 1rem 10rem;
   position: relative;
 
+  &Video {
+    padding-bottom: 5rem;
+  }
+
   @media (max-width: @breakPointM) {
     padding: 3rem 1rem 5rem;
   }
@@ -94,6 +98,7 @@
 .youtubeContainer {
   position: relative;
   padding-bottom: 56%;
+  .contentGridMedium();
 
   iframe {
     position: absolute;
