--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -127,6 +127,10 @@
   border-radius: @borderRadius;
   text-decoration: none;
 
+  @media (min-width: @breakPointM) {
+    font-size: @fontSizeL;
+  }
+
   &:hover {
     color: var(--bg-color);
     background: var(--font-color);
