button & input focus style

--- a/src/components/Button/style.module.less
+++ b/src/components/Button/style.module.less
@@ -10,4 +10,9 @@
         color: var(--bg-color);
         background: var(--font-color);
     }
+
+    &:focus {
+        outline: none;
+        box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
+    }
 }
