--- a/src/components/EmailListForm/style.module.less
+++ b/src/components/EmailListForm/style.module.less
@@ -14,6 +14,10 @@
         &::placeholder {
             color: @grey;
         }
+
+        &:focus {
+            outline: none;
+            box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
         }
     }
 
@@ -98,4 +102,9 @@
     font-size: inherit !important;
     padding: @buttonPadding !important;
     line-height: inherit;
+
+    &:focus {
+        outline: none;
+        box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
+    }
 }
