--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -100,7 +100,8 @@
 .youtubeContainer {
     position: relative;
     padding-bottom: 56%;
-    .contentGridMedium();
+    .contentGridSlim();
+    pointer-events: all;
 
     iframe {
         position: absolute;
