youtube section: fix drag n drop stuff next to video

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -104,7 +104,8 @@
 .youtubeContainer {
   position: relative;
   padding-bottom: 56%;
-  .contentGridMedium();
+  .contentGridSlim();
+  pointer-events: all;
 
   iframe {
     position: absolute;
