desktop: nicer illustration around video

--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -1,7 +1,9 @@
 @import '../style/vars.less';
 
 .container {
-    .globeBackground();
+    @media (max-width: @breakPointM) {
+        .globeBackground();
+    }
     background-attachment: fixed;
 }
 
