--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -4,12 +4,17 @@
   padding: 5rem 1rem 10rem;
   position: relative;
 
-  &Video {
-    padding-bottom: 5rem;
-  }
-
   @media (max-width: @breakPointM) {
     padding: 3rem 1rem 5rem;
+  }
+
+  &Video {
+    padding-bottom: 5rem;
+
+    @media (max-width: @breakPointM) {
+      padding-top: 10rem;
+      padding-bottom: 12rem;
+    }
   }
 
   &:nth-child(3n + 1) {
