--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -51,7 +51,7 @@
 .image {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: absolute !important;
     left: 0;
     object-fit: cover;
 }
