--- a/src/components/Button/style.module.less
+++ b/src/components/Button/style.module.less
@@ -1,5 +1,6 @@
 @import '../style/vars.less';
 
+.linkButton,
 .button {
   padding: @buttonPadding;
   border: var(--font-color) solid @borderWidth;
@@ -15,4 +16,13 @@
     outline: none;
     box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
   }
+}
+
+.button {
+  background: transparent;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+  cursor: pointer;
 }
