--- a/src/components/Button/style.module.less
+++ b/src/components/Button/style.module.less
@@ -1,6 +1,6 @@
 @import '../style/vars.less';
 
-.button {
+.linkButton, .button {
     padding: @buttonPadding;
     border: var(--font-color) solid @borderWidth;
     border-radius: @borderRadius;
@@ -15,4 +15,13 @@
         outline: none;
         box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
     }
+}
+
+.button {
+    background: transparent;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    color: inherit;
+    cursor: pointer;
 }
