--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -6,6 +6,7 @@
   border: var(--font-color) solid @borderWidth;
   border-radius: @borderRadius;
   text-decoration: none;
+  font-size: @fontSizeL;
 
   &:hover {
     color: var(--bg-color);
@@ -21,7 +22,6 @@
 .button {
   background: transparent;
   font-family: inherit;
-  font-size: inherit;
   line-height: inherit;
   color: inherit;
   cursor: pointer;
