--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -6,7 +6,7 @@
   color: inherit;
   font-family: inherit;
   border-radius: 0;
-  font-size: inherit;
+  font-size: @fontSizeL;
   padding: @buttonPadding;
   line-height: inherit;
 
