--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -5,6 +5,7 @@
     border: var(--font-color) solid @borderWidth;
     border-radius: @borderRadius;
     text-decoration: none;
+    font-size: @fontSizeL;
 
     &:hover {
         color: var(--bg-color);
@@ -20,7 +21,6 @@
 .button {
     background: transparent;
     font-family: inherit;
-    font-size: inherit;
     line-height: inherit;
     color: inherit;
     cursor: pointer;
