--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -1,12 +1,11 @@
 @import '../../style/vars.less';
 
-.textInput {
+.textInput, .textInputInline {
     background: @white ;
     border: none;
     color: inherit;
     font-family: inherit;
     border-radius: 0;
-    font-size: @fontSizeL;
     padding: @buttonPadding;
     line-height: inherit;
 
@@ -18,4 +17,12 @@
         outline: none;
         box-shadow: inset 0 0 0 @borderWidthThick var(--font-color);
     }
+}
+
+.textInput {
+    font-size: @fontSizeL;
+}
+
+.textInputInline {
+    font-size: @fontSizeS;
 }
