TextInput: style fix

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -4,7 +4,7 @@
 .textInputInline {
   background: @white;
   border: none;
-  color: inherit;
+  color: var(--bg-color);
   font-family: inherit;
   border-radius: 0;
   padding: @buttonPadding;
