--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -1,3 +1,14 @@
+.sliderContainer {
+  display: flex;
+  margin-top: 1rem;
+}
+
+.textInput {
+  margin-left: 1rem;
+}
+
+// DA SLIDER 👇
+
 @track-color: var(--font-color);
 @thumb-color: var(--font-color);
 
