--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -11,6 +11,8 @@ body {
     margin: 0;
     color: @red;
     --bg-color: @grey;
+    --font-color: @red;
+    --secondary-color: @blueDark;
 }
 
 h1, h2, h3 {
