--- a/src/components/Forms/Checkbox/style.module.less
+++ b/src/components/Forms/Checkbox/style.module.less
@@ -5,7 +5,7 @@
     position: relative;
     flex: 0 0 auto;
     border: 1px solid var(--font-color);
-    border-radius: .4em;
+    border-radius: 0;
     background-color: transparent;
     cursor: pointer;
     margin: 0 0.5em 0 0;
@@ -16,10 +16,22 @@
     align-self: flex-start;
 
     &:checked {
+        background: var(--font-color);
+        color: var(--bg-color);
         &:after {
             content:'✓';
             font-size: 1.5em;
             position: absolute;
+        }
+    }
+
+    &:focus {
+        outline: none;
+        border-width: 0.2rem;
+
+        &:checked {
+            border-color: var(--bg-color);
+            border-width: 0.1rem;
         }
     }
 }
