add and style ValidationError

--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -12,7 +12,7 @@ body {
   color: @red;
   --bg-color: @grey;
   --font-color: @red;
-  --secondary-color: @blueDark;
+  --secondary-color: @yellow;
 }
 
 h1,
