--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -151,7 +151,7 @@
   z-index: 1;
   grid-row-gap: 2rem;
   margin: 4rem 0;
-  font-size: @fontSizeXXL;
+  font-size: @fontSizeXXXL;
 
   @media (max-width: @breakPointM) {
     font-size: @fontSizeL;
