--- a/src/components/Forms/ValidationError/style.module.less
+++ b/src/components/Forms/ValidationError/style.module.less
@@ -1,8 +1,10 @@
 .error {
-  color: var(--secondary-color);
+  background: var(--secondary-color);
+  padding: 0.2em;
   animation-duration: 1s;
   animation-iteration-count: 3;
   animation-name: blink;
+  display: inline-block;
 }
 
 @keyframes blink {
