FinallyMessage: add illustration for success

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -11,6 +11,11 @@
     &Video {
         padding-bottom: 5rem;
 
+
+        .sectionBody {
+            position: relative;
+        }
+
         @media (max-width: @breakPointM) {
             padding-top: 10rem;
             padding-bottom: 12rem;
@@ -48,7 +53,6 @@
     max-width: @contentWidthL;
     .contentGrid();
     margin: 0 auto;
-    position: relative;
     z-index: 1;
 }
 
