--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -1,7 +1,12 @@
+@import '../../style/vars.less';
+
 .message {
     background: var(--secondary-color);
     padding: 1em;
     margin-top: 5rem;
+    margin-bottom: 5rem;
+    position: relative;
+    z-index: 1;
 }
 
 .blinkShort {
@@ -23,4 +28,35 @@
     100% {
         opacity: 0;
     }
+}
+
+.savedStage {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: @contentWidthL;
+    transform: translateX(-50%);
+    padding-top: 50%;
+
+    > * {
+        position: absolute;
+    }
+}
+
+.savedStageCrowd1, .savedStageCrowd2 {
+    bottom: -20%;
+}
+
+.savedStageHat, .savedStageFlowers {
+    height: 30%;
+    bottom: 30%;
+}
+
+.savedStageFlowers {
+    left: -10%;
+}
+
+.savedStageHat {
+
+    right: 0%;
 }
