--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -45,18 +45,58 @@
 
 .savedStageCrowd1, .savedStageCrowd2 {
     bottom: -20%;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-name: gentleCheer;
+}
+
+.savedStageCrowd1 {
+    animation-delay: -1.5s;
 }
 
 .savedStageHat, .savedStageFlowers {
     height: 30%;
     bottom: 30%;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
 }
 
 .savedStageFlowers {
     left: -10%;
+    animation-name: throwLeft;
 }
 
 .savedStageHat {
-
     right: 0%;
+    animation-name: throwRight;
+}
+
+@keyframes throwRight {
+    0% {
+        transform: translateY(0) rotate(-10deg);
+    }
+    to {
+        transform: translateY(-10%) rotate(10deg);
+    }
+}
+
+@keyframes throwLeft {
+    0% {
+        transform: translateY(0) rotate(10deg);
+    }
+    to {
+        transform: translateY(-10%) rotate(-10deg);
+    }
+}
+
+@keyframes gentleCheer {
+    0% {
+        transform: translateY(-5%);
+    }
+    50% {
+        transform: translateY(5%);
+    }
+    100% {
+        transform: translateY(-5%);
+    }
 }
