TextInput: optimisation for small screens

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -8,6 +8,7 @@
     border-radius: 0;
     padding: @buttonPadding;
     line-height: inherit;
+    max-width: 100%;
 
     &::placeholder {
         color: @grey;
