--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -35,8 +35,15 @@
   bottom: 0;
   left: 50%;
   width: @contentWidthL;
+  max-width: 90vw;
   transform: translateX(-50%);
-  padding-top: 50%;
+
+  &:before {
+    content: '';
+    padding-top: 50%;
+    width: 100%;
+    display: block;
+  }
 
   > * {
     position: absolute;
@@ -46,6 +53,8 @@
 .savedStageCrowd1,
 .savedStageCrowd2 {
   bottom: -20%;
+  left: 0;
+  right: 0;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-name: gentleCheer;
@@ -57,19 +66,19 @@
 
 .savedStageHat,
 .savedStageFlowers {
-  height: 30%;
-  bottom: 30%;
+  height: 47%;
+  bottom: 50%;
   animation-duration: 4s;
   animation-fill-mode: forwards;
 }
 
 .savedStageFlowers {
-  left: -10%;
+  left: -16%;
   animation-name: throwLeft;
 }
 
 .savedStageHat {
-  right: 0%;
+  right: -2%;
   animation-name: throwRight;
 }
 
