--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -16,6 +16,24 @@
     width: 6.1rem;
 }
 
+.stage {
+    height: 80vh;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.hand {
+    height: 6rem;
+}
+
+.handContainer {
+    position: absolute;
+    bottom: -1rem;
+}
+
 // DA SLIDER 👇
 
 @track-color: var(--font-color);
@@ -35,95 +53,95 @@
 @track-radius: 0;
 
 .track() {
-  width: @track-width;
-  height: @track-height;
-  cursor: pointer;
-  animate: 0.2s;
+    width: @track-width;
+    height: @track-height;
+    cursor: pointer;
+    animate: 0.2s;
 }
 
 .thumb() {
-  border: @thumb-border-width solid @thumb-border-color;
-  height: @thumb-height;
-  width: @thumb-width;
-  border-radius: @thumb-radius;
-  background: @thumb-color;
-  cursor: pointer;
+    border: @thumb-border-width solid @thumb-border-color;
+    height: @thumb-height;
+    width: @thumb-width;
+    border-radius: @thumb-radius;
+    background: @thumb-color;
+    cursor: pointer;
 }
 
 .thumbFocus() {
-  border-width: 0.2rem;
-  cursor: pointer;
+    border-width: 0.2rem;
+    cursor: pointer;
 }
 
 .input {
-  -webkit-appearance: none;
-  margin: (@thumb-height / 2) 0;
-  width: @track-width;
-  height: @track-height;
-
-  &:focus {
-    outline: none;
-    &::-webkit-slider-thumb {
-      .thumbFocus();
-    }
-
-    &::-moz-range-thumb {
-      .thumbFocus();
-    }
-  }
-
-  &::-webkit-slider-runnable-track {
-    .track();
-    background: @track-color;
-    border-radius: @track-radius;
-    border: @track-border-width solid @track-border-color;
-  }
-
-  &::-webkit-slider-thumb {
-    .thumb();
     -webkit-appearance: none;
-    margin-top: (((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2));
-  }
+    margin: (@thumb-height / 2) 0;
+    width: @track-width;
+    height: @track-height;
 
-  &:focus::-webkit-slider-runnable-track {
-    background: @track-color;
-  }
+    &:focus {
+        outline: none;
+        &::-webkit-slider-thumb {
+        .thumbFocus();
+        }
 
-  &::-moz-range-track {
-    .track();
-    background: @track-color;
-    border-radius: @track-radius;
-     border: @track-border-width solid @track-border-color;
-  }
-  &::-moz-range-thumb {
-     .thumb();
-  }
+        &::-moz-range-thumb {
+        .thumbFocus();
+        }
+    }
 
-  &::-ms-track {
-    .track();
-    background: transparent;
-    border-color: transparent;
-    border-width: @thumb-width 0;
-    color: transparent;
-  }
+    &::-webkit-slider-runnable-track {
+        .track();
+        background: @track-color;
+        border-radius: @track-radius;
+        border: @track-border-width solid @track-border-color;
+    }
 
-  &::-ms-fill-lower {
-    background: @track-color;
-    border: @track-border-width solid @track-border-color;
-    border-radius: (@track-radius * 2);
-  }
-  &::-ms-fill-upper {
-    background: @track-color;
-    border: @track-border-width solid @track-border-color;
-    border-radius: (@track-radius * 2);
-  }
-  &::-ms-thumb {
-    .thumb();
-  }
-  &:focus::-ms-fill-lower {
-    background: @track-color;
-  }
-  &:focus::-ms-fill-upper {
-    background: @track-color;
-  }
+    &::-webkit-slider-thumb {
+        .thumb();
+        -webkit-appearance: none;
+        margin-top: (((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2));
+    }
+
+    &:focus::-webkit-slider-runnable-track {
+        background: @track-color;
+    }
+
+    &::-moz-range-track {
+        .track();
+        background: @track-color;
+        border-radius: @track-radius;
+        border: @track-border-width solid @track-border-color;
+    }
+    &::-moz-range-thumb {
+        .thumb();
+    }
+
+    &::-ms-track {
+        .track();
+        background: transparent;
+        border-color: transparent;
+        border-width: @thumb-width 0;
+        color: transparent;
+    }
+
+    &::-ms-fill-lower {
+        background: @track-color;
+        border: @track-border-width solid @track-border-color;
+        border-radius: (@track-radius * 2);
+    }
+    &::-ms-fill-upper {
+        background: @track-color;
+        border: @track-border-width solid @track-border-color;
+        border-radius: (@track-radius * 2);
+    }
+    &::-ms-thumb {
+        .thumb();
+    }
+    &:focus::-ms-fill-lower {
+        background: @track-color;
+    }
+    &:focus::-ms-fill-upper {
+        background: @track-color;
+    }
 }
