--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -16,6 +16,24 @@
   width: 6.1rem;
 }
 
+.stage {
+  height: 80vh;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+.hand {
+  height: 6rem;
+}
+
+.handContainer {
+  position: absolute;
+  bottom: -1rem;
+}
+
 // DA SLIDER 👇
 
 @track-color: var(--font-color);
