SignatureCountSlider: bigger hands with more variety

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -26,19 +26,22 @@
 }
 
 .hand {
-    height: 8rem;
+    height: 12rem;
+}
+
+.handContainer {
     position: absolute;
 
     &_bottom {
-        bottom: -1rem;
+        bottom: -4rem;
     }
 
     &_left {
         transform: rotate(90deg);
-        left: -1rem;
+        left: -4rem;
     }
     &_right {
-        right: -1rem;
+        right: -4rem;
         transform: rotate(-90deg);
     }
 }
