--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -17,7 +17,6 @@
 }
 
 .stage {
-    height: 100%;
     width: 100%;
     position: absolute;
     left: 0;
@@ -33,16 +32,19 @@
     transform: translateY(-50%);
 }
 
+.stageInnerInner {
+    top: 10rem;
+    bottom: 0;
+    width: 100%;
+    position: absolute;
+}
+
 .hand {
     height: 12rem;
 }
 
 .handContainer {
     position: absolute;
-
-    &_bottom {
-        bottom: -4rem;
-    }
 
     &_left {
         transform: rotate(90deg);
