--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -29,7 +29,7 @@
   height: 100vh;
   width: 100vw;
   position: absolute;
-  top: -2rem;
+  top: 0rem;
   transform: translateY(-50%);
 }
 
@@ -42,6 +42,15 @@
 
 .hand {
   height: 12rem;
+  transition: height 0.3s ease;
+
+  .many & {
+    height: 8rem;
+  }
+
+  .more & {
+    height: 6rem;
+  }
 }
 
 .handContainer {
