pledge: more mobile optimizations

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -51,20 +51,34 @@
 }
 
 .hand {
-    height: 12rem;
     transition: height .3s ease;
+    
+    @media (min-width: @breakPointM) {
+        height: 12rem;
 
-    .many & {
-        height: 8rem;
+        .many & {
+            height: 8rem;
+        }
+
+        .more & {
+            height: 6rem;
+        }   
     }
 
-    .more & {
-        height: 6rem;
+    @media (max-width: @breakPointM) {
+        height: 4rem;
     }
 }
 
 .handContainer {
     position: absolute;
+
+
+    &:first-child {
+        .hand {
+            height: 12rem;
+        }
+    }
 
     &_left {
         transform: rotate(90deg);
