slider wiggle animation

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -22,6 +22,7 @@
 
   @media (max-width: @breakPointM) {
     align-self: center;
+    margin: 1rem 0 0;
   }
 }
 
@@ -120,6 +121,10 @@
   border-radius: @thumb-radius;
   background: @thumb-color;
   cursor: pointer;
+
+  animation-name: wiggle;
+  animation-iteration-count: 3;
+  animation-duration: 0.2s;
 }
 
 .thumbFocus() {
@@ -199,5 +204,20 @@
   }
   &:focus::-ms-fill-upper {
     background: @track-color;
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateX(0.3rem);
+  }
+  66% {
+    transform: translateX(-0.3rem);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
