form: warning colors

--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -2,6 +2,7 @@
 
 .message {
   background: var(--secondary-color);
+  color: var(--bg-color);
   padding: 1em;
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -18,7 +19,7 @@
   height: 3rem;
   width: 3rem;
   margin-right: 1.5rem;
-  background: currentColor;
+  background: var(--bg-color);
   flex: 0 0 auto;
   animation-duration: 1s;
   animation-iteration-count: infinite;
