--- a/src/components/Forms/ValidationError/style.module.less
+++ b/src/components/Forms/ValidationError/style.module.less
@@ -1,7 +1,8 @@
 .error {
   background: var(--secondary-color);
+  color: var(--bg-color);
   padding: 0.2em;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
   animation-iteration-count: 3;
   animation-name: blink;
   display: inline-block;
