CTAButton: refactor out

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -149,13 +149,7 @@
     }
 }
 
-.callToActionContainer {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-}
-
-.callToActionLink, .emailSignup {
+.emailSignup {
     @media (min-width: @breakPointM) {
         font-size: @fontSizeL;
     }
