--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -3,6 +3,7 @@
 .section {
   padding: 5rem 1rem 10rem;
   position: relative;
+  overflow: hidden;
 
   @media (max-width: @breakPointM) {
     padding: 3rem 1rem 5rem;
