--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -184,9 +184,9 @@
   }
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeM;
+    font-size: @fontSizeL;
     grid-row-gap: 1rem;
-    margin: 8rem 0;
+    margin: 5rem 0 7rem;
   }
 }
 
@@ -199,7 +199,7 @@
   }
 
   @media (max-width: @breakPointM) {
-    grid-column-start: 1;
+    grid-column-start: 2;
   }
 }
 
@@ -211,7 +211,7 @@
   }
 
   @media (max-width: @breakPointS) {
-    grid-column-start: 2;
+    grid-column-start: 1;
   }
 }
 
